# industrial-vision-inspector

./: .gitignore  README.md  generate_sample_images.py  main.py  pyproject.toml  reporte_inspeccion.json  requirements.txt  vision_inspector.py
.github/workflows/: tests.yml
output_results/: vision_inspector.py
tests/: conftest.py  test_components.py  test_edges.py  test_illumination.py  test_pipeline.py  test_segmentation.py
vision_inspector/: __init__.py  components.py  config.py  edges.py  illumination.py  pipeline.py  report.py  segmentation.py
