[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-inspector"
version = "2.0.0"
description = "Industrial computer vision QA pipeline built with OpenCV"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "opencv-python>=4.8,<5",
    "numpy>=1.24,<2",
]

[tool.setuptools]
packages = ["vision_inspector"]

[tool.pytest.ini_options]
# Ensures the project root (and therefore the vision_inspector package)
# is always importable during test collection, regardless of whether
# pytest is invoked as `pytest`, `python -m pytest`, or from CI.
pythonpath = ["."]
testpaths = ["tests"]
